GNOME Bugzilla – Bug 788138
glib-compile-resources: Fix leak of a GHashTable
Last modified: 2017-10-02 14:30:58 UTC
Trivial patch coming.
Created attachment 360359 [details] [review] glib-compile-resources: Fix leak of a GHashTable Signed-off-by: Philip Withnall <withnall@endlessm.com>
Review of attachment 360359 [details] [review]: sure, why not
Attachment 360359 [details] pushed as b0cbd21 - glib-compile-resources: Fix leak of a GHashTable